Import api.js module

--- a/22/src/index.html
+++ b/22/src/index.html
@@ -28,5 +28,5 @@
       </form>
     </div>
   </body>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="module"></script>
 </html>
