(feat) add memes, DONE!

--- a/dialogflow-6/public/index.html
+++ b/dialogflow-6/public/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <meta name="title" content="mood-o-(meme)ter" />
+    <meta
+      name="description"
+      content="your current mood based on memes - built using the dialogflow api"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="mood-o-(meme)ter" />
+    <meta
+      property="og:description"
+      content="your current mood based on memes - built using the dialogflow api"
+    />
+    <meta
+      property="og:image"
+      content=""
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="mood-o-(meme)ter" />
+    <meta
+      property="twitter:description"
+      content="your current mood based on memes - built using the dialogflow api"
+    />
+    <meta
+      property="twitter:image"
+      content=""
+    />
     <title>mood-o-(meme)ter</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
