Changed the layout

--- a/Dialogflow 42/src/index.html
+++ b/Dialogflow 42/src/index.html
@@ -9,21 +9,33 @@
     
 </head>
 <body>
-  <div id='bodybox'>
-    <div id='chatborder'>
-      <p id="chatlog7" class="chatlog">&nbsp;</p>
-      <p id="chatlog6" class="chatlog">&nbsp;</p>
-      <p id="chatlog5" class="chatlog">&nbsp;</p>
-      <p id="chatlog4" class="chatlog">&nbsp;</p>
-      <p id="chatlog3" class="chatlog">&nbsp;</p>
-      <p id="chatlog2" class="chatlog">&nbsp;</p>
-      <p id="chatlog1" class="chatlog">&nbsp;</p>
-      <input type="text" name="chat" id="chatbox" placeholder="Hi there! Type here to talk to me." onfocus="placeHolder()">
-    </div>
-    <br>
-    <br>
-    
-  </div>
+  <div class="context">
+   
+<iframe
+  class="chatBox"
+  allow="microphone;"
+  width="350"
+  height="430"
+  src="https://console.dialogflow.com/api-client/demo/embedded/7db338a8-5d0b-448c-a311-52481cc22ce8">
+</iframe> 
+
+</div>
+
+
+<div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+</div >
   <script src="index.js"></script>
 </body>
 </html>
