--- a/22/src/index.html
+++ b/22/src/index.html
@@ -29,4 +29,5 @@
     </div>
   </body>
   <script src="js/main.js" type="module"></script>
+  <script src="js/api.js" type="module"></script>
 </html>
